UI Fix for Navigation tab alignment

--- a/onboarding/src/main/webapp/resources/stylesheets/application.css
+++ b/onboarding/src/main/webapp/resources/stylesheets/application.css
@@ -126,6 +126,7 @@
   font-family: inherit;
   margin: 0;
   width: 20em;
+  height:100%;
 }
 
 .navigbar a:hover, .dropitdown:hover .dropbtn {
